--- a/bot1/bot1_description_dev/config/joint_names_bot1_description_dev.yaml
+++ b/bot1/bot1_description_dev/config/joint_names_bot1_description_dev.yaml
@@ -1,1 +1,1 @@
-controller_joint_names: ['', ]
+controller_joint_names: ['', 'wheel_fl_joint', 'wheel_fr_joint', 'wheel_bl_joint', 'wheel_br_joint', ]
